--- a/main.css
+++ b/main.css
@@ -1,9 +1,70 @@
 body {
     background-color: #edebcc;
+    font-family: "Roboto Light", cursive;
+}
+label {
+    display: inline-block;
+    width: 50%;
+    text-align: right;
+}
+input {
+    background: #d9ae5f;
+    font-size: 20px;
+    margin-left: 10px;
 }
 #area {
     display: table;
     margin: 0 auto;
+}
+#welcome {
+    position: absolute;
+    border: 2px solid rgba(0,0,0,0.2);
+    background-color: #d9ae5f;
+    margin: 20px;
+    padding: 0 20px;
+    font-size: 20px;
+}
+.start {
+    background: #3D94F6;
+    background-image: -webkit-linear-gradient(top, #3D94F6, #1E62D0);
+    background-image: -moz-linear-gradient(top, #3D94F6, #1E62D0);
+    background-image: -ms-linear-gradient(top, #3D94F6, #1E62D0);
+    background-image: -o-linear-gradient(top, #3D94F6, #1E62D0);
+    background-image: linear-gradient(to bottom, #3D94F6, #1E62D0);
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    border-radius: 0;
+    color: #FFFFFF;
+    font-family: Open Sans, monospace;
+    font-size: 20px;
+    font-weight: 100;
+    padding: 12px 22px;
+    box-shadow: 1px 1px 20px 0 #000000;
+    -webkit-box-shadow: 1px 1px 10px 0 #000000;
+    -moz-box-shadow: 1px 1px 10px 0 #000000;
+    text-shadow: 1px 1px 10px #000000;
+    border: solid #337FED 1px;
+    text-decoration: none;
+    display: inline-block;
+    cursor: pointer;
+    text-align: center;
+}
+
+.start:hover {
+    border: solid #337FED 1px;
+    background: #1E62D0;
+    background-image: -webkit-linear-gradient(top, #1E62D0, #3D94F6);
+    background-image: -moz-linear-gradient(top, #1E62D0, #3D94F6);
+    background-image: -ms-linear-gradient(top, #1E62D0, #3D94F6);
+    background-image: -o-linear-gradient(top, #1E62D0, #3D94F6);
+    background-image: linear-gradient(to bottom, #1E62D0, #3D94F6);
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    border-radius: 0;
+    text-decoration: none;
+}
+.hidden {
+    display: none;
 }
 table {
     text-align: center;
