--- a/main.css
+++ b/main.css
@@ -24,6 +24,18 @@ input {
     padding: 0 20px;
     font-size: 20px;
 }
+#finish {
+    border: 2px solid rgba(0,0,0,0.2);
+    background-color: #d9ae5f;
+    padding: 0 20px;
+    font-size: 20px;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, 0);
+    margin-top: 30vh;
+    min-width: 60vw;
+    display: none;
+}
 .start {
     background: #3D94F6;
     background-image: -webkit-linear-gradient(top, #3D94F6, #1E62D0);
