--- a/main.css
+++ b/main.css
@@ -24,10 +24,10 @@ input {
     padding: 0 20px;
     font-size: 20px;
 }
-#finish {
+#modal {
     border: 2px solid rgba(0,0,0,0.2);
     background-color: #d9ae5f;
-    padding: 0 20px;
+    padding: 20px;
     font-size: 20px;
     position: absolute;
     left: 50%;
@@ -35,8 +35,12 @@ input {
     margin-top: 30vh;
     min-width: 60vw;
     display: none;
+    top: 0;
 }
-.start {
+#modal h1 {
+    padding: 0;
+}
+.button {
     background: #3D94F6;
     background-image: -webkit-linear-gradient(top, #3D94F6, #1E62D0);
     background-image: -moz-linear-gradient(top, #3D94F6, #1E62D0);
